[package]
name = "solana-t_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.4"
ta = "0.5.0"
dotenv = "0.15"
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
env_logger = "0.9"
tungstenite = "0.27.0"
rusqlite = { version = "0.28", features = ["bundled"] }
chrono = "0.4"